After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 64934 - Entering some invalid numbers in random number dialog crashes numeric
Entering some invalid numbers in random number dialog crashes numeric
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Analytics
unspecified
Other other
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2001-11-20 07:55 UTC by Roy-Magne Mo
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Roy-Magne Mo 2001-11-20 07:55:19 UTC
Package: Gnumeric
Severity: normal
Version: 0.77
Synopsis: Entering some invalid numbers in random number dialog crashes numeric
Bugzilla-Product: Gnumeric
Bugzilla-Component: Analytics

Description:
Empty sheet

Entering A1:B2 in Value and probability range, setting number og
variables to 1 and size of samples to 1 

pushing ok - crashes gnumeric, cvs as of today



Debugging Information:

(no debugging symbols found)...(no debugging symbols found)...
(no debugging symbols found)...[New Thread 1024 (LWP 1425)]
0x40881e99 in __wait4 () from /lib/libc.so.6

Thread 1 (Thread 1024 (LWP 1425))

  • #0 __wait4
    from /lib/libc.so.6
  • #1 __DTOR_END__
    from /lib/libc.so.6
  • #2 gnome_segv_handle
    from /usr/lib/libgnomeui.so.32
  • #3 <signal handler called>
  • #4 gtk_type_check_object_cast
    from /usr/lib/libgtk-1.2.so.0
  • #5 dialog_advanced_filter
    at eval.c line 41
  • #6 gtk_marshal_NONE__NONE
    from /usr/lib/libgtk-1.2.so.0
  • #7 gtk_handlers_run
    from /usr/lib/libgtk-1.2.so.0
  • #8 gtk_signal_real_emit
    from /usr/lib/libgtk-1.2.so.0
  • #9 gtk_signal_emit
    from /usr/lib/libgtk-1.2.so.0
  • #10 gtk_button_clicked
    from /usr/lib/libgtk-1.2.so.0
  • #11 gtk_real_button_released
    from /usr/lib/libgtk-1.2.so.0
  • #12 gtk_marshal_NONE__NONE
    from /usr/lib/libgtk-1.2.so.0
  • #13 gtk_signal_real_emit
    from /usr/lib/libgtk-1.2.so.0
  • #14 gtk_signal_emit
    from /usr/lib/libgtk-1.2.so.0
  • #15 gtk_button_released
    from /usr/lib/libgtk-1.2.so.0
  • #16 gtk_button_button_release
    from /usr/lib/libgtk-1.2.so.0
  • #17 gtk_marshal_BOOL__POINTER
    from /usr/lib/libgtk-1.2.so.0
  • #18 gtk_signal_real_emit
    from /usr/lib/libgtk-1.2.so.0
  • #19 gtk_signal_emit
    from /usr/lib/libgtk-1.2.so.0
  • #20 gtk_widget_event
    from /usr/lib/libgtk-1.2.so.0
  • #21 gtk_propagate_event
    from /usr/lib/libgtk-1.2.so.0
  • #22 gtk_main_do_event
    from /usr/lib/libgtk-1.2.so.0
  • #23 gdk_event_dispatch
    from /usr/lib/libgdk-1.2.so.0
  • #24 g_main_dispatch
    from /usr/lib/libglib-1.2.so.0
  • #25 g_main_iterate
    from /usr/lib/libglib-1.2.so.0
  • #26 g_main_run
    from /usr/lib/libglib-1.2.so.0
  • #27 gtk_main
    from /usr/lib/libgtk-1.2.so.0
  • #28 main
    at eval.c line 41
  • #29 __libc_start_main
    at ../sysdeps/generic/libc-start.c line 129
  • #0 __wait4
    from /lib/libc.so.6
  • #0 __wait4
    from /lib/libc.so.6
  • #1 __DTOR_END__
    from /lib/libc.so.6
  • #2 gnome_segv_handle
    from /usr/lib/libgnomeui.so.32
  • #3 <signal handler called>
  • #4 gtk_type_check_object_cast
    from /usr/lib/libgtk-1.2.so.0
  • #5 dialog_advanced_filter
    at eval.c line 41
  • #6 gtk_marshal_NONE__NONE
    from /usr/lib/libgtk-1.2.so.0
  • #7 gtk_handlers_run
    from /usr/lib/libgtk-1.2.so.0




------- Bug moved to this database by unknown@bugzilla.gnome.org 2001-11-20 02:55 -------

Reassigning to the default owner of the component, jgoldberg@home.com.

Comment 1 Andreas J. Guelzow 2001-11-20 15:27:12 UTC
I am not surprised, there is so far little if any error checking done
in the random number generation tool. I am currently working on that
tool (as well as 2-way ANOVA and Rank/Percentiles that are at the same
stage).

I'll fix that bug.
Comment 2 Andreas J. Guelzow 2001-11-20 15:37:39 UTC
In fact the crash is due to some stupid mistake on my part. I'll be
sending a diff to Jody in a few minutes.
Comment 3 Jody Goldberg 2001-11-20 17:45:57 UTC
Fixed in CVS.