Don't use non-existing entry field. Bug:

2001-11-20  Andreas J. Guelzow  <guelzow@kirkman.taliesin.ca>

	* dialog-analysis-tools.c (random_tool_ok_clicked_cb) : Don't use
	  non-existing entry field.
	  Bug: http://bugzilla.gnome.org/show_bug.cgi?id=64934